[package]
name = "shaco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.3"
async-std = "1.10.0"
base64 = "0.13.0"
cidr-utils = "0.5.4"
dirs = "3.0.1"
futures = "0.3.16"
gcd = "2.0.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.0"
pem = "0.8"
rand = "0.8.4"
regex = "1.5.4"
rsa = { version = "0.5.0" }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"
toml = "0.5.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
[[bin]]
name = "client"
path = "src/client/main.rs"
[[bin]]
name = "server"
path = "src/server/main.rs"
[lib]
name = "common"
path = "src/common/lib.rs"
